# PAII2021

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/pg/: CMakeLists.txt  benchmark.h  cudaDefs.h
lib/utility/: CMakeLists.txt  format.h  mat.cuh  rng.cpp
src/: CMakeLists.txt
src/cv02/: CMakeLists.txt  runner.cu
src/cv03/: CMakeLists.txt  globalMemoryRunner.cu  runner.cu
src/cv04/: CMakeLists.txt  runner.cu
src/playground/: CMakeLists.txt  main.cu
src/template/: CMakeLists.txt  unifiedMemTest.cu
